Property naming fix+ Header Spacing + map height increase

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -5,6 +5,7 @@
   margin-top: 2rem;
   padding:2rem 0;
   text-transform: uppercase;
+  letter-spacing:3px;
   @include respond(large-desktop) {
     font-size: 4rem;
   }
