--- a/ui/map/map.styles.scss
+++ b/ui/map/map.styles.scss
@@ -7,6 +7,6 @@
     iframe{
         margin: 0 auto;
         width: 100%;
-        height: 30vh;
+        height: 40vh;
     }
 }
